header and footer updated with all the hyperlinks

--- a/src/footer.html
+++ b/src/footer.html
@@ -60,12 +60,12 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Resort in Goa</a></li>
-                <li><a href="javascript:void(0);"> Resort in Kerala</a></li>
-                <li><a href="javascript:void(0);"> Resort in Himachal Pradesh</a></li>
-                <li><a href="javascript:void(0);"> Resorts in Sikkim</a></li>
-                <li><a href="javascript:void(0);"> Resorts in Ooty</a></li>
-                <li><a href="javascript:void(0);"> More</li>
+                <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-varca-beach-resort-in-goa">Resort in Goa</a></li>
+                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-ashtamudi-resort-in-kerala">Resort in Kerala</a></li>
+                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-mashobra-resort-in-himachal-pradesh">Resort in Himachal Pradesh</a></li>
+                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-resort-in-gangtok-sikkim">Resorts in Sikkim</a></li>
+                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-derby-green-ooty-resort-in-tamil-nadu">Resorts in Ooty</a></li>
+                  <li><a href="https://www.clubmahindra.com/resorts">More</a></li>
               </ul>
             </div>
           </div>
@@ -77,12 +77,12 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Board of Directors & Committees</a></li>
-                <li><a href="javascript:void(0);"> Financials</a></li>
-                <li><a href="javascript:void(0);"> Stock Exchange Filing</a></li>
-                <li><a href="javascript:void(0);"> Investor Relations</a></li>
-                <li><a href="javascript:void(0);"> Stock updates - BSE</a></li>
-                <li><a href="javascript:void(0);"> Stock updates - NSE</a></li>
+                <li><a href="https://www.clubmahindra.com/investors">Board of Directors & Committees</a></li>
+                <li><a href="https://www.clubmahindra.com/investors/financials">Financials</a></li>
+                <li><a href="https://www.clubmahindra.com/investors/stock-exchange-filling">Stock Exchange Filing</a></li>
+                <li><a href="https://www.clubmahindra.com/investors/investor-information">Investor Relations</a></li>
+                <li><a href="https://www.bseindia.com/stockinfo/index.htm?scrip_cd=533088">Stock updates - BSE</a></li>
+                <li><a href="https://www1.nseindia.com/companytracker/cmtracker.jsp?symbol=MHRIL">Stock updates - NSE</a></li>
               </ul>
             </div>
           </div>
@@ -94,11 +94,11 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Awards</a></li>
-                <li><a href="javascript:void(0);"> Career</a></li>
-                <li><a href="javascript:void(0);"> Company Overview</a></li>
-                <li><a href="javascript:void(0);"> Leadership</a></li>
-                <li><a href="javascript:void(0);"> Corporate Sustainability & CSR</a></li>
+                <li><a href="https://www.clubmahindra.com/awards">Awards</a></li>
+                <li><a href="https://www.clubmahindra.com/careers">Career</a></li>
+                <li><a href="https://www.clubmahindra.com/company-overview">Company Overview</a></li>
+                <li><a href="https://www.clubmahindra.com/leadership">Leadership</a></li>
+                <li><a href="https://www.clubmahindra.com/csr">Corporate Sustainability & CSR</a></li>
               </ul>
             </div>     
           </div>     
@@ -110,11 +110,11 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Stay Experiences </a></li>
-                <li><a href="javascript:void(0);"> Signature Experiences</a></li>
-                <li><a href="javascript:void(0);"> Indulge Your Senses</a></li>
-                <li><a href="javascript:void(0);"> Children Love These</a></li>
-                <li><a href="javascript:void(0);"> Dining Experiences</a></li>
+                <li><a href="https://www.clubmahindra.com/experiences/category/mesmerising">Stay Experiences</a></li>
+                <li><a href="https://www.clubmahindra.com/experiences/category/unique-experience">Signature Experiences</a></li>
+                <li><a href="https://www.clubmahindra.com/experiences/category/indulge-your-senses">Indulge Your Senses</a></li>
+                <li><a href="https://www.clubmahindra.com/experiences/category/happy-hub">Children Love These</a></li>
+                <li><a href="https://www.clubmahindra.com/experiences/category/funandfood">Dining Experiences</a></li>
               </ul>
             </div>     
           </div>     
@@ -126,12 +126,12 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Corporate Membership</a></li>
-                <li><a href="javascript:void(0);"> Redeem Holiday Voucher</a></li>
-                <li><a href="javascript:void(0);"> Business Partner Login</a></li>
-                <li><a href="javascript:void(0);"> Bliss</a></li>
-                <li><a href="javascript:void(0);"> Gozest</a></li>
-                <li><a href="javascript:void(0);"> Member Login</a></li>
+                <li><a href="https://www.clubmahindra.com/corporate_membership">Corporate Membership</a></li>
+                <li><a href="https://gvms.clubmahindra.com/giftvoucher/Login.php">Redeem Holiday Voucher</a></li>
+                <li><a href="http://partners.clubmahindra.com/dsalogin">Business Partner Login</a></li>
+                <li><a href="https://bliss.clubmahindra.com/">Bliss</a></li>
+                <li><a href="https://gozest.clubmahindra.com/">Gozest</a></li>
+                <li><a href="https://members.clubmahindra.com/?">Member Login</a></li>
               </ul>
             </div>     
           </div>     
@@ -143,12 +143,12 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Resorts </a></li>
-                <li><a href="javascript:void(0);"> Feast</a></li>
-                <li><a href="javascript:void(0);"> Alive</a></li>
-                <li><a href="javascript:void(0);"> Soul</a></li>
-                <li><a href="javascript:void(0);"> Travelogues</a></li>
-                <li><a href="javascript:void(0);"> Explore</a></li>
+                <li><a href="https://www.clubmahindra.com/magicstream/category/resorts">Resorts</a></li>
+                <li><a href="https://www.clubmahindra.com/magicstream/category/feast">Feast</a></li>
+                <li><a href="https://www.clubmahindra.com/magicstream/category/alive">Alive</a></li>
+                <li><a href="https://www.clubmahindra.com/magicstream/category/soul">Soul</a></li>
+                <li><a href="https://www.clubmahindra.com/magicstream/category/travelogues">Travelogues</a></li>
+                <li><a href="https://www.clubmahindra.com/magicstream/category/explore">Explore</a></li>
               </ul>
             </div>     
           </div>     
@@ -160,10 +160,10 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Travel Diaries</a></li>
-                <li><a href="javascript:void(0);"> Making Every Moment Magical</a></li>
-                <li><a href="javascript:void(0);"> Social Buzz</a></li>
-                <li><a href="javascript:void(0);"> Blogs</a></li>
+                <li><a href="https://www.clubmahindra.com/community/member-stories/club-mahindra-reviews">Travel Diaries</a></li>
+                <li><a href="https://www.clubmahindra.com/community/member-stories">Making Every Moment Magical</a></li>
+                <li><a href="https://www.clubmahindra.com/community/cm-social">Social Buzz</a></li>
+                <li><a href="https://www.clubmahindra.com/community/member-stories/blogs">Blogs</a></li>
               </ul>
             </div>      
           </div>      
@@ -175,12 +175,12 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Experiences</a></li>
-                <li><a href="javascript:void(0);"> Places to Visit</a></li>
-                <li><a href="javascript:void(0);"> Things to Do</a></li>
-                <li><a href="javascript:void(0);"> For Kids</a></li>
-                <li><a href="javascript:void(0);"> Travel Stories</a></li>
-                <li><a href="javascript:void(0);"> Travel Guide</a></li>
+                <li><a href="https://www.clubmahindra.com/blog/experience">Experiences</a></li>
+                <li><a href="https://www.clubmahindra.com/blog/places-to-visit">Places to Visit</a></li>
+                <li><a href="https://www.clubmahindra.com/blog/things-to-do">Things to Do</a></li>
+                <li><a href="https://www.clubmahindra.com/blog/for-kids">For Kids</a></li>
+                <li><a href="https://www.clubmahindra.com/blog/travel-stories">Travel Stories</a></li>
+                <li><a href="https://www.clubmahindra.com/blog/travel-guide">Travel Guide</a></li>
               </ul>
             </div>
           </div>
@@ -192,12 +192,12 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> Press Releases</a></li>
-                <li><a href="javascript:void(0);"> Media Contacts</a></li>
-                <li><a href="javascript:void(0);"> In The News</a></li>
-                <li><a href="javascript:void(0);"> Partner with us</a></li>
-                <li><a href="javascript:void(0);"> Gourmet Getaways</a></li>
-                <li><a href="javascript:void(0);"> Resort Development</a></li>
+                <li><a href="https://www.clubmahindra.com/press-release">Press Releases</a></li>
+                <li><a href="https://www.clubmahindra.com/Media-Contact">Media Contacts</a></li>
+                <li><a href="https://www.clubmahindra.com/in-the-news">In The News</a></li>
+                <li><a href="https://www.clubmahindra.com/partner-with-us">Partner with us</a></li>
+                <li><a href="https://www.clubmahindra.com/gourmet-getaways/">Gourmet Getaways</a></li>
+                <li><a href="https://www.clubmahindra.com/resort-partnership">Resort Development</a></li>
               </ul>
             </div>      
           </div>      
@@ -209,10 +209,10 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="javascript:void(0);"> DND Registry</a></li>
-                <li><a href="javascript:void(0);"> Grievance Redressal</a></li>
-                <li><a href="javascript:void(0);"> Franchise Opportunity</a></li>
-                <li><a href="javascript:void(0);"> RCI</a></li>
+                <li><a href="https://www.clubmahindra.com/dnd-registry">DND Registry</a></li>
+                <li><a href="https://www.clubmahindra.com/grievance-redressal">Grievance Redressal</a></li>
+                <li><a href="https://partners.clubmahindra.com/DsaRegister">Franchise Opportunity</a></li>
+                <li><a href="https://www.clubmahindra.com/rci/resorts/">RCI</a></li>
               </ul>
             </div>
           </div>
