--- a/src/header.html
+++ b/src/header.html
@@ -26,41 +26,41 @@
               <div class="link-content">
                 <p class="title">Resorts In India</p>
                 <div class="nav-item">
-                  <a class="pos-top" href="#!">EAST (6)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/resorts/resorts-in-east">EAST (6)</a>
                 </div>
                 <div class="nav-item">
-                  <a class="pos-top" href="#!">NORTH (15)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/resorts/resorts-in-north">NORTH (15)</a>
                 </div>
                 <div>
-                  <a class="pos-top" href="#!">SOUTH (23)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/resorts/resorts-in-south">SOUTH (23)</a>
                 </div>
                 <div>
-                  <a class="pos-top" href="#!">WEST (28)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/resorts/resorts-in-west">WEST (28)</a>
                 </div>
               </div>
               <div class="link-content">
                 <p class="title">International Resorts</p>
                 <div class="nav-item">
-                  <a class="pos-top" href="#!">United States of America (10)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/resorts/international-resorts/america">United States of America (10)</a>
                 </div>
                 <div class="nav-item">
-                  <a class="pos-top" href="#!">ASIA (8)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/resorts/international-resorts/asia">ASIA (8)</a>
                 </div>
                 <div>
-                  <a class="pos-top" href="#!">EUROPE (14)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/resorts/international-resorts/europe">EUROPE (14)</a>
                 </div>
                 <div>
-                  <a class="pos-top" href="#!">Middle East (1)</a>
+                  <a class="pos-top" href="https://www.clubmahindra.com/our-resorts/club-mahindra-arabian-dreams-resort-in-dubai-uae">Middle East (1)</a>
                 </div>
               </div>
             </div>
             </div>
           </li>
           <li class="nav-item">
-            <a class="link nav-acc-link" href="#!">Membership</a>
+            <a class="link nav-acc-link" href="https://www.clubmahindra.com/memberships">Membership</a>
           </li>
           <li class="nav-item">
-            <a class="link nav-acc-link" href="#!">Experiences</a>
+            <a class="link nav-acc-link" href="https://www.clubmahindra.com/experiences">Experiences</a>
             <div class=" sub-list ">
               <div class="di-flex">
                 <div class="img-box">
@@ -77,62 +77,62 @@
                 </div>
                 <div class="link-content">
                   <div class="nav-item">
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/category/mesmerising">Stay Experiences</a>
+                  </div>
+                  <!-- <div class="nav-item">
                     <a class="pos-top" href="#!">Stay Experiences</a>
-                  </div>
-                  <div class="nav-item">
-                    <a class="pos-top" href="#!">Stay Experiences</a>
+                  </div> -->
+                  <div>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/category/unique-experience">Signature Experiences</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Signature Experiences</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/category/indulge-your-senses">Indulge Your Senses</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Indulge Your Senses</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/category/happy-hub">Children Love These</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Children Love These</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/category/funandfood">Dining Experiences</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Dining Experiences</a>
-                  </div>
-                  <div>
-                    <a class="pos-top" href="#!">Magic Stream</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/magicstream/">Magic Stream</a>
                   </div>
                 </div>
                 <div class="link-content">
                   <p class="title">'Only At Club Mahindra' Experiences</p>
                   <div class="nav-item">
-                    <a class="pos-top" href="#!">Junior Chef</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/Food">Junior Chef</a>
                   </div>
                   <div class="nav-item">
-                    <a class="pos-top" href="#!">Tea with Chef</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/tea-chef">Tea with Chef</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Svaastha Spa</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/svaastha-spa">Svaastha Spa</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Acacia Grill</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/acacia-grill">Acacia Grill</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Yoga Session</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/yoga-session">Yoga Session</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Trampoline</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/trampoline">Trampoline</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Hawa Mahal</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/hawa-mahal">Hawa Mahal</a>
                   </div>
                   <div>
-                    <a class="pos-top" href="#!">Jal Mahal</a>
+                    <a class="pos-top" href="https://www.clubmahindra.com/experiences/jal-mahal">Jal Mahal</a>
                   </div>
                 </div>
               </div>
             </div>
           </li>
           <li class="nav-item">
-            <a class="link" href="#!">Blog</a>
+            <a class="link" href="https://www.clubmahindra.com/blog/">Blog</a>
           </li>
           <li class="nav-item">
-            <a class="link nav-acc-link" href="#!">Member login</a>
+            <a class="link nav-acc-link" href="https://members.clubmahindra.com/cmh/">Member login</a>
           </li>
         </ul>
       </div>
@@ -161,10 +161,10 @@
                     <div class="mega_menu_inner">
                       <p><a class="resort_heading" href="#">Resorts In India</a></p>        
                       <ul>
-                        <li><a href="#!">EAST (6)</a></li>
-                        <li><a href="#!">NORTH (15)</a></li>
-                        <li><a href="#!">SOUTH (23)</a></li>
-                        <li><a href="#!">WEST (28)</a></li>
+                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-east">EAST (6)</a></li>
+                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-north">NORTH (15)</a></li>
+                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-south">SOUTH (23)</a></li>
+                        <li><a href="https://www.clubmahindra.com/resorts/resorts-in-west">WEST (28)</a></li>
                       </ul>
                     </div>
                   </div>
@@ -172,10 +172,10 @@
                     <div class="mega_menu_inner">
                       <a class="resort_heading" href="#">International Resorts</a>        
                       <ul>
-                        <li><a href="#!">United States of America (10)</a></li>
-                        <li><a href="#!">ASIA (8)</a></li>
-                        <li><a href="#!">EUROPE (14)</a></li>
-                        <li><a href="#!">Middle East (1)</a></li>                                   
+                        <li><a href="https://www.clubmahindra.com/resorts/international-resorts/america">United States of America (10)</a></li>
+                        <li><a href="https://www.clubmahindra.com/resorts/international-resorts/asia">ASIA (8)</a></li>
+                        <li><a href="https://www.clubmahindra.com/resorts/international-resorts/europe">EUROPE (14)</a></li>
+                        <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-arabian-dreams-resort-in-dubai-uae">Middle East (1)</a></li>                                   
                       </ul>
                     </div>
                   </div>
@@ -183,7 +183,7 @@
               </div>
             </div>
           </div>
-          <a class="link nav-acc-link" href="#!">Membership</a>
+          <a class="link nav-acc-link" href="https://www.clubmahindra.com/memberships">Membership</a>
           <div class="ac">
             <h2 class="ac-header">
               <button type="button" class="ac-trigger">Experiences</button>
@@ -196,12 +196,12 @@
                 <div class="col-12">
                   <div class="mega_menu_inner">
                     <ul>
-                      <li><a href="#!" >Stay Experiences</a></li>
-                      <li><a href="#!" >Signature Experiences</a></li>
-                      <li><a href="#!" >Indulge Your Senses</a></li>
-                      <li><a href="#!" >Children Love These</a></li>
-                      <li><a href="#!" >Dining Experiences</a></li>
-                      <li><a href="#!" >Magic Stream</a></li>
+                      <li><a href="https://www.clubmahindra.com/experiences/category/mesmerising" >Stay Experiences</a></li>
+                      <li><a href="https://www.clubmahindra.com/experiences/category/unique-experience" >Signature Experiences</a></li>
+                      <li><a href="https://www.clubmahindra.com/experiences/category/indulge-your-senses" >Indulge Your Senses</a></li>
+                      <li><a href="https://www.clubmahindra.com/experiences/category/happy-hub" >Children Love These</a></li>
+                      <li><a href="https://www.clubmahindra.com/experiences/category/funandfood" >Dining Experiences</a></li>
+                      <li><a href="https://www.clubmahindra.com/magicstream/" >Magic Stream</a></li>
                     </ul>
                   </div>
                 </div>
@@ -224,8 +224,8 @@
             </div>
           </div>
           
-          <a class="link nav-acc-link" href="#!">Blog</a>
-          <a class="link nav-acc-link" href="#!">Member login</a>
+          <a class="link nav-acc-link" href="https://www.clubmahindra.com/blog/">Blog</a>
+          <a class="link nav-acc-link" href="https://members.clubmahindra.com/cmh/">Member login</a>
         </div>
       </div>
     </div>
