header footer updated in the last changed files of shubham

--- a/src/category-listing.html
+++ b/src/category-listing.html
@@ -52,25 +52,25 @@
                 <div class="cat-row" id="catNavBar">
                   <nav class="owl-carousel owl-theme category-carousel" id="catNav">
                     <div class="item">
-                      <a href="#!">Experiences</a>
+                      <a href="#!" class="gotoSection" data-to-section="experiences">Experiences</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Places to Visit</a>
+                      <a href="#!" class="gotoSection" data-to-section="placestoVisit">Places to Visit</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Things to Do</a>
+                      <a href="#!" class="gotoSection" data-to-section="thingstoDo">Things to Do</a>
                     </div>
                     <div class="item">
-                      <a href="#!">For Kids</a>
+                      <a href="#!" class="gotoSection" data-to-section="forKids">For Kids</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Food</a>
+                      <a href="#!" class="gotoSection" data-to-section="food">Food</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Travel Stories</a>
+                      <a href="#!" class="gotoSection" data-to-section="travelStories">Travel Stories</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Travel Guide</a>
+                      <a href="#!" class="gotoSection" data-to-section="travelGuide">Travel Guide</a>
                     </div>
                     <div class="item">
                     </div>
