--- a/src/individual.html
+++ b/src/individual.html
@@ -42,25 +42,25 @@
                 <div class="cat-row" id="catNavBar">
                   <nav class="owl-carousel owl-theme category-carousel" id="catNav">
                     <div class="item">
-                      <a href="#!">Experiences</a>
+                      <a href="index.html#experiences" >Experiences</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Places to Visit</a>
+                      <a href="index.html#placestoVisit">Places to Visit</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Things to Do</a>
+                      <a href="index.html#thingstoDo">Things to Do</a>
                     </div>
                     <div class="item">
-                      <a href="#!">For Kids</a>
+                      <a href="index.html#forKids">For Kids</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Food</a>
+                      <a href="index.html#food">Food</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Travel Stories</a>
+                      <a href="index.html#travelStories" >Travel Stories</a>
                     </div>
                     <div class="item">
-                      <a href="#!">Travel Guide</a>
+                      <a href="index.html#travelGuide" class="gotoSection" data-to-section="travelGuide">Travel Guide</a>
                     </div>
                     <div class="item">
                     </div>
@@ -341,22 +341,14 @@
                           </div>
                           <div class="col-50">
                             <div class="check-out">
-                                <h2 class="sub-h-1">Best places to visit outside India</h2>
+                                <h2 class="sub-h-1">Best places to visit based on areas India</h2>
                                 <div class="set-box">
                                     <select name="" id="">
-                                        <option value="">By Month</option>
-                                        <option value="January">January</option>
-                                        <option value="February">February</option>
-                                        <option value="March">March</option>
-                                        <option value="April">April</option>
-                                        <option value="May">May</option>
-                                        <option value="June">June</option>
-                                        <option value="July">July</option>
-                                        <option value="August">August</option>
-                                        <option value="September">September</option>
-                                        <option value="October">October</option>
-                                        <option value="November">November</option>
-                                        <option value="December">December</option>
+                                        <option value="">By Areas</option>
+                                        <option value="south">South</option>
+                                        <option value="east">East</option>
+                                        <option value="west">West</option>
+                                        <option value="north">North</option>
                                     </select>
                                 </div>
                                 <div class="cas">
