all new changes updated

--- a/src/index.html
+++ b/src/index.html
@@ -401,7 +401,10 @@
         </section>
         <section class="category-section">
           <div class="container">
-            <h2 class="cb-title main-title">Travel Inspiration</h2>
+            <h2 class="cb-title main-title">
+              <!-- Travel Inspiration -->
+              Travel Blog
+            </h2>
             <div class="di-flex category-box">
               <a href="#!" class="cat-box" id="experiences">
                 <div class="img-box">
@@ -788,10 +791,10 @@
               </div>
               <div class="col-33">
                 <div class="check-out">
-                  <h2 class="sub-h-1">Best places to visit based on areas India</h2>
+                  <h2 class="sub-h-1">Tourist places in India - By Region</h2>
                   <div class="set-box">
                       <select name="" id="">
-                          <option value="">By Areas</option>
+                          <option value="">By Region</option>
                           <option value="south">South</option>
                           <option value="east">East</option>
                           <option value="west">West</option>
@@ -923,7 +926,8 @@
                           <option value="">Goa</option>
                       </select>
                   </div>
-                  <div class="cas">
+
+                  <!-- <div class="cas">
                     <div class="owl-carousel owl-theme placesCards places-cards">
                       <div class="item" data-dot="<button>1</button>">
                         <div class="cas-in">
@@ -1031,7 +1035,35 @@
                         </div>
                       </div>
                     </div>
+                  </div> -->
+
+                  <div class="cas-rb">
+                    <div class="rb-lg">
+                        <div class="rb-stck">
+                            <img src="<%= require('./img/lrg-1.png') %>" alt="" class="">
+                        </div>
+                        <div class="rb-lg-txt">
+                            <p>Lorem ipsum dolor sit amet, </p>
+                        </div>
+                    </div>
+                    <div class="rb-lg">
+                        <div class="rb-stck">
+                            <img src="<%= require('./img/lrg-2.png') %>" alt="" class="">
+                        </div>
+                        <div class="rb-lg-txt">
+                            <p>Lorem ipsum dolor sit amet, </p>
+                        </div>
+                    </div>
+                    <!-- <div class="rb-lg">
+                        <div class="rb-stck">
+                            <img src="<%= require('./img/lrg-3.png') %>" alt="" class="">
+                        </div>
+                        <div class="rb-lg-txt">
+                            <p>Lorem ipsum dolor sit amet, </p>
+                        </div>
+                    </div> -->
                   </div>
+
                 </div>
               </div>
             </div>
