--- a/src/individual.html
+++ b/src/individual.html
@@ -31,7 +31,7 @@
                             <p class="name">Richa Asthana Prakash</p>
                           </a>
                           <div class="blog-date">
-                            <span> Published on : 21 Jun, 2022, 3:00 pm</span>
+                            <span> Update on : 21 Jun, 2022, 3:00 pm</span>
                           </div>
                           <!-- <a href="#!" class="read-more">Read More <i class="arrow right"></i></a> -->
                         </div>
