footer and distance

--- a/footer.html
+++ b/footer.html
@@ -121,7 +121,7 @@
         </div>     
         <div class="ac m-footlist">
           <h3 class="ac-header">
-            <button type="button" class="ac-trigger">More</button>
+            <button type="button" class="ac-trigger moreLink">More</button>
           </h3>
           <div class="ac-panel">
             <div class="ac-text">
