--- a/src/footer.html
+++ b/src/footer.html
@@ -121,7 +121,7 @@
         </div>     
         <div class="ac m-footlist">
           <h3 class="ac-header">
-            <button type="button" class="ac-trigger">More</button>
+            <button type="button" class="ac-trigger moreLink">More</button>
           </h3>
           <div class="ac-panel">
             <div class="ac-text">
@@ -225,7 +225,7 @@
           </h3>
           <div class="ac-panel">
             <div class="ac-text">
-          <ul>
+          <ul class="last-col">
             <li>Customer Care Numbers</li>
             <li> New Memberships</li>
             <li> 1800 209 2345</li>
@@ -318,6 +318,10 @@
           </g>
           </svg>
         </a>
+        <a href="https://www.instagram.com/clubmahindra/" target="_blank">
+          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="32px" height="32px" viewBox="0 0 143.000000 143.000000" preserveAspectRatio="xMidYMid meet"><g transform="translate(0.000000,143.000000) scale(0.100000,-0.100000)" stroke="none"><path d="M319 1111 l-29 -29 0 -365 0 -365 26 -31 26 -31 374 0 375 0 24 25 25 24 0 374 0 373 -28 27 -28 27 -368 0 -368 0 -29 -29z m566 -122 c22 -6 51 -21 64 -32 44 -40 51 -75 51 -244 0 -195 -12 -232 -85 -264 -41 -18 -63 -20 -215 -17 -152 3 -171 5 -196 24 -64 47 -69 62 -72 228 -7 282 23 315 278 316 74 0 153 -5 175 -11z"></path> <path d="M551 947 c-63 -23 -76 -52 -80 -193 -4 -161 3 -207 39 -247 l28 -32 161 -3 c250 -5 261 5 261 245 0 160 -6 182 -53 217 -25 19 -44 21 -175 23 -98 2 -158 -1 -181 -10z m247 -113 c59 -39 79 -130 42 -192 -39 -64 -113 -88 -184 -58 -108 45 -110 207 -4 257 48 22 106 19 146 -7z"></path><path d="M673 804 c-45 -23 -68 -74 -53 -120 14 -41 60 -74 104 -74 36 0 96 58 96 93 0 83 -77 136 -147 101z"></path></g></svg></a><a href="https://in.pinterest.com/clubmahindra/" target="_blank" style="
+width: -16%;
+"><svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" viewBox="0 0 512 512" preserveAspectRatio="xMidYMid meet"><g transform="" stroke="none"><path d="M449.446,0c34.525,0 62.554,28.03 62.554,62.554l0,386.892c0,34.524 -28.03,62.554 -62.554,62.554l-260.214,0c10.837,-18.276 24.602,-44.144 30.094,-65.264c3.331,-12.822 17.073,-65.143 17.073,-65.143c8.934,17.04 35.04,31.465 62.807,31.465c82.652,0 142.199,-76.005 142.199,-170.448c0,-90.528 -73.876,-158.265 -168.937,-158.265c-118.259,0 -181.063,79.384 -181.063,165.827c0,40.192 21.397,90.228 55.623,106.161c5.192,2.415 7.969,1.351 9.164,-3.666c0.909,-3.809 5.53,-22.421 7.612,-31.077c0.665,-2.767 0.336,-5.147 -1.901,-7.86c-11.323,-13.729 -20.394,-38.983 -20.394,-62.536c0,-60.438 45.767,-118.921 123.739,-118.921c67.317,0 114.465,45.875 114.465,111.485c0,74.131 -37.438,125.487 -86.146,125.487c-26.9,0 -47.034,-22.243 -40.579,-49.52c7.727,-32.575 22.696,-67.726 22.696,-91.239c0,-21.047 -11.295,-38.601 -34.673,-38.601c-27.5,0 -49.585,28.448 -49.585,66.551c0,24.27 8.198,40.685 8.198,40.685c0,0 -27.155,114.826 -32.132,136.211c-5.51,23.659 -3.352,56.982 -0.956,78.664l0.011,0.004l-103.993,0c-34.524,0 -62.554,-28.03 -62.554,-62.554l0,-386.892c0,-34.524 28.029,-62.554 62.554,-62.554l386.892,0Z"></path></g></svg></a>
       </div>
     </div>
   </div>
