--- a/src/detail.html
+++ b/src/detail.html
@@ -450,25 +450,25 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur delectus provident eaque, aliquid, sed itaque voluptatibus sequi, necessitatibus officiis error ipsum perferendis aperiam eos. Consequatur quasi laboriosam praesentium necessitatibus doloremque?</p>
                   </div>
                   <div class="content">
-                    <h4 class="title">Other means of Traveling from Mumbai to Pune</h4>
+                    <h2 class="title">Other means of Traveling from Mumbai to Pune</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur delectus provident eaque, aliquid, sed itaque voluptatibus sequi, necessitatibus officiis error ipsum perferendis aperiam eos. Consequatur quasi laboriosam praesentium necessitatibus doloremque?</p>
                   </div>
                   <div class="content">
-                    <h4 class="title">How to Reach Pune by Train</h4>
+                    <h2 class="title">How to Reach Pune by Train</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur delectus provident eaque, aliquid, sed itaque voluptatibus sequi, necessitatibus officiis error ipsum perferendis aperiam eos. Consequatur quasi laboriosam praesentium necessitatibus doloremque?</p>
                   </div>
                   <div class="content">
-                    <h4 class="title">Best time to Visit Pune</h4>
+                    <h2 class="title">Best time to Visit Pune</h2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur delectus provident eaque, aliquid, sed itaque voluptatibus sequi, necessitatibus officiis error ipsum perferendis aperiam eos. Consequatur quasi laboriosam praesentium necessitatibus doloremque?</p>
                   </div>
                 </div>
                 <div class="largest-section" id="blog-section">
                   <div class="di-flex title-box">
                     <h2 class="sub-title">Places To Visit In Pune </h2>
-                    <div class="nav-button">
+                    <!-- <div class="nav-button">
                       <button class="prev-nav"><i class="arrow left"></i></button>
                       <button class="next-nav"><i class="arrow right"></i></button>
-                    </div>
+                    </div> -->
                   </div>
                   <div id="visiteCarousel" class="owl-carousel owl-theme blog-carousel">
                     <div class="item">
