--- a/src/detail.html
+++ b/src/detail.html
@@ -476,7 +476,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                            
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
@@ -488,7 +488,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -499,7 +499,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -510,7 +510,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -521,10 +521,10 @@
                 <div class="largest-section" id="blog-section1">
                   <div class="di-flex title-box">
                     <h2 class="sub-title">Popular food in Pune</h2>
-                    <div class="nav-button">
+                    <!-- <div class="nav-button">
                       <button class="prev-nav"><i class="arrow left"></i></button>
                       <button class="next-nav"><i class="arrow right"></i></button>
-                    </div>
+                    </div> -->
                   </div>
                   <div id="visiteCarousel1" class="owl-carousel owl-theme blog-carousel">
                     <div class="item">
@@ -532,7 +532,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                            
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
@@ -544,7 +544,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -555,7 +555,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -566,7 +566,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -577,10 +577,10 @@
                 <div class="largest-section" id="blog-section2">
                   <div class="di-flex title-box">
                     <h2 class="sub-title">Things to Do in Pune </h2>
-                    <div class="nav-button">
+                    <!-- <div class="nav-button">
                       <button class="prev-nav"><i class="arrow left"></i></button>
                       <button class="next-nav"><i class="arrow right"></i></button>
-                    </div>
+                    </div> -->
                   </div>
                   <div id="visiteCarousel2" class="owl-carousel owl-theme blog-carousel">
                     <div class="item">
@@ -588,7 +588,7 @@
                         <img src="<%= require('./img/food-pune.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -599,7 +599,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -610,7 +610,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
@@ -621,7 +621,7 @@
                         <img src="<%= require('./img/Blogs1.jpg') %>" alt="" class="bg-img">
                         <div class="content">
                           <div class="text-content">
-                            <h2>Know the Important Tourist Places in and Around Wayanad</h2>
+                            <h3>Know the Important Tourist Places in and Around Wayanad</h3>
                             <a href="#!" class="read-more">Read More <i class="arrow right"></i></a>
                           </div>
                         </div>
