--- a/src/footer.html
+++ b/src/footer.html
@@ -27,29 +27,30 @@
       <li><a href="javascript:void(0);"> Resort in Meghalaya </a></li>
     </ul> -->
     <ul class="pop-resort">
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-varca-beach-resort-in-goa">Resort in Goa</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-kandaghat-resort-in-shimla-himachal-pradesh">Resort in Shimla</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-snow-peaks-resort-in-manali-himachal-pradesh">Resort in Manali</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/devka-beach-resort-daman">Resort in Daman</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/ramada-alleppey">Resort in Alappuzha</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/r-k-sarovar-portico-resort--in-jammu-and-kashmir">Resort in Kashmir</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-madikeri-resort-in-coorg-karnataka">Resort in Coorg</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/vijayshree-resort-and-heritage-village-hampi-karnataka">Resort in Hampi</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-kanatal-resort-in-uttarakhand">Resort in Uttarakhand</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-munnar-resort-in-kerala">Resort in Munnar</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/driftwood-ladakh">Resort in Ladakh</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/tropicana-resort-and-spa-alibaug">Resort in Alibaug</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-mussoorie-resort-in-uttarakhand">Resort in Mussoorie</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/summit-hermon-spa-hotel-in-darjeeling">Resort in Darjeeling</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-saj-resort-in-mahabaleshwar-maharashtra">Resort in Mahabaleshwar</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/ramada-plaza-resort-in-agra">Resort in Agra</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/the-golden-landmark-resort-in-mysore-karnataka">Resort in Mysore</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/devka-beach-resort-daman">Resort in Daman</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/azzaro-resorts-and-spa-in-diu">Resort in Diu</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/vythiri-village-wayanad-resort-in-kerala">Resorts in Wayanad</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-munnar-resort-in-kerala">Resorts in Munnar</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/eagleton-golf-resort-in-bangalore-karnataka">Resorts in bangalore</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-resort-puducherry-pondicherry-resort-in-tamil-nadu">Resorts in Puducherry</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-udaipur-resort-in-rajasthan">Resorts in Udaipur</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/tropicana-resort-and-spa-alibaug">Resorts in Alibaug</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-kumbhalgarh-resort-in-rajasthan">Resorts in Kumbhalgarh </a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-sherwood-resort-in-mahabaleshwar-maharashtra">Resorts in Mahabaleshwar</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-resort-in-jaipur">Resorts in Jaipur</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/the-golden-landmark-resort-in-mysore-karnataka">Resorts in Mysore</a></li>
       <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-derby-green-ooty-resort-in-tamil-nadu">Resort in Ooty</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-ashtamudi-resort-in-kerala">Resorts in Kerala</a></li>
-      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-udaipur-resort-in-rajasthan">Resorts in Rajasthan</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/vijayshree-resort-and-heritage-village-hampi-karnataka">Resorts in Hampi</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/clarks-resort-abhyaran-ranthambore">Resorts in Ranthambore</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-thekkady-resort-in-kerala">Resorts in Thekkady</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/hotel-aravali-mount-abu">Resorts in Mount Abu</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-snow-peaks-resort-in-manali-himachal-pradesh">Resorts in Manali</a></li>
       <li><a href="https://www.clubmahindra.com/our-resorts/polo-towers-shillong-meghalaya">Resort in Meghalaya</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-jaisalmer-resort-in-rajasthan">Resorts in Jaisalmer</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-mussoorie-resort-in-uttarakhand">Resorts in Mussoorie</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-mashobra-resort-in-himachal-pradesh">Resorts in Shimla</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-madikeri-resort-in-coorg-karnataka">Resorts in Coorg</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-kanatal-resort-in-uttarakhand">Resort in Uttrakhand</a></li>
+      <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-pratap-niwas-resort-in-jodhpur-rajasthan">Resorts in Jodhpur</a></li>
+      
   </ul>
     <div class="middle-footer ">
       <div class="lft-footmenu m-footmenu footerAcc">
@@ -60,11 +61,11 @@
           <div class="ac-panel">
             <div class="ac-text">
               <ul>
-                <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-varca-beach-resort-in-goa">Resort in Goa</a></li>
-                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-ashtamudi-resort-in-kerala">Resort in Kerala</a></li>
-                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-mashobra-resort-in-himachal-pradesh">Resort in Himachal Pradesh</a></li>
-                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-resort-in-gangtok-sikkim">Resorts in Sikkim</a></li>
-                  <li><a href="https://www.clubmahindra.com/our-resorts/club-mahindra-derby-green-ooty-resort-in-tamil-nadu">Resorts in Ooty</a></li>
+                <li><a href="https://www.clubmahindra.com/resorts/resorts-in-goa">Resort in Goa </a></li>
+                  <li><a href="https://www.clubmahindra.com/resorts/resorts-in-kerala">Resorts in Kerala</a></li>
+                  <li><a href="https://www.clubmahindra.com/resorts/resorts-in-daman-and-diu">Resort in Daman</a></li>
+                  <li><a href="https://www.clubmahindra.com/resorts/resorts-in-himachal-pradesh">Resort in Himachal Pradesh</a></li>
+                  <li><a href="https://www.clubmahindra.com/resorts/resorts-in-jammu-and-kashmir">Resort in Kashmir</a></li>
                   <li><a href="https://www.clubmahindra.com/resorts">More</a></li>
               </ul>
             </div>
